<resources>
    <string name="app_name">Conecta4</string>
    <string name="imageview_de_casilla">ImageView de Casilla</string>
    <string name="_0">0</string>
    <string name="reset_game">Reiniciar\npartida</string>
    <string name="reset_count">Reiniciar\ncontador</string>
    <string name="turn">Turno</string>
    <string name="logo">Logo</string>
    <string name="play">Jugar</string>
    <string name="info">Información</string>
    <string name="info_reto">Aplicación #1 desarrollada por @DavidThar para el reto mensual de aplicaciones organizado por MoureDev</string>
    <string name="color_wins">Color %1$s gana</string>
    <string name="volver">Volver</string>
    <string name="victoria">Victoria!</string>
    <string name="github_logo">Github Logo</string>
    <string name="twitter_logo">Twitter Logo</string>
    <string name="github_mouredev">Github Mouredev</string>
</resources>