<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLinear"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/win_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/dialog_red_title"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/victoria"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/win_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/color_wins"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/win_dialog_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/red_piece"
        android:text="@string/volver"
        app:cornerRadius="30dp" />


</LinearLayout>