<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlay"
        app:cornerRadius="13dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:textSize="20sp"
        app:layout_constraintVertical_bias="0.4"
        android:backgroundTint="@color/secondary_color"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInfo"
        app:cornerRadius="13dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:textSize="20sp"
        android:backgroundTint="#727D87"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>